components/gatekeeper-constraints/prohibited-annotations/samples/prohibit-injected-gateway/namespace-istio-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    maistra.io/member-of: istio-system
